# DeGenTWeb

./: .gitattributes  .gitmodules  LICENSE  execution.md  google_trends.md  preliminary_binoculars_eval.md  pyproject.toml  references.bib
src/degentweb/: __init__.py
src/degentweb/browser/: __init__.py
src/degentweb/common_crawl/: __init__.py  classify_english.py  data_analysis.py
src/degentweb/download/: __init__.py
src/degentweb/google_trends/: __init__.py  crawl.py  google_trends_all_cat.json  inject.js
src/degentweb/logging/: __init__.py
src/degentweb/plotting/: __init__.py
src/degentweb/types/: __init__.py
